# tkp

./: .gitignore  .gitmodules  .travis.yml  CHANGES.md  CITATION.cff  CMakeLists.txt  CONTRIBUTORS.rst  COPYING  README.rst  TODO  TODO.md  Vagrantfile  alembic.ini  bootstrap.sh  requirements.txt  setup.cfg  setup.py  setup.sh  stream.py  test.py  upgrade
database/MonetDB/: CMakeLists.txt
database/MonetDB/batches/: insert.assoc.all.sh  min.setup.db.batch  remote.setup.db.batch  setup.db.Aug2011-SP1.batch  setup.db.Aug2011-SP2.batch  setup.db.Aug2011-branch.batch  setup.db.Dec2011.batch  setup.db.Jun2010-SP1.batch  setup.db.batch  setup.remote.db.batch  setup.sharded.db.scilens.batch  setupdb.sh  sql_files
database/MonetDB/benchmarking/: simdata.sql
database/MonetDB/dumps/: dump.database.batch  dump.database.pipeline_develop.batch
database/MonetDB/functions/: create.function.degrees.sql  create.function.doIntersectElls.sql  create.function.doPosErrCirclesIntersect.sql  create.function.doTest.sql  create.function.getAssocParamsRunCat.sql  create.function.getBand.sql  create.function.getCountLogLRbin_CatBG.sql  create.function.getDistanceXSource2CatArcsec.sql  create.function.getHuynhSkyDensity_deg2.sql  create.function.getSkyDensity_sr.sql  create.function.getWeightRectIntersection.sql  create.function.insertDataset.sql  create.function.insertImage.sql  create.function.insertXSource.sql  create.function.localSourceDensityInCat_deg2.sql  create.function.nearestNeighborInCat.sql  create.function.neighborsInCats.sql  create.function.neighborsInCatsParams.sql  create.function.ra2bbshms.sql  create.function.rad.sql  create.function.spectralindex.sql  create.functions.datetime.sql  select.neighborsincat.sql  select.valuePosErrCircles.sql
database/MonetDB/load/: load.cat.nvss.sql  load.cat.vlss.sql  load.cat.wenss.sql  load.db.back-up.sh  load.wenss.sourcefield.xtrsrc.sql  update_catalog_locations.bash
database/MonetDB/procedures/: create.procedure.AssocWenssSources2Cat.sql  create.procedure.AssocXSourceByImage.sql  create.procedure.AssocXSrc2Cat.sql  create.procedure.AssocXSrc2XSrc.sql  create.procedure.BuildFrequencyBands.sql  create.procedure.BuildZones.sql  create.procedure.InsertSrc.sql  create.procedure.InsertVersion.sql  create.procedure.LoadLSM.sql  create.procedure.MultipleCatMatchingInit.sql  proc.test.AssocXSourceByImage.sql  select.catassocs.rutledge.sql  select.catassocs.tkp.sql  select.catassocs.wenss-nvss.sql  select.nearestneighbors.assoc.sql  select.r_dimless.sql  select.reliability.sql  t.sql
database/MonetDB/queries/: query.getConPointsMaxSigmaOverMu.sql  region.sql  test.row_number.sql  testqueries.cat.sql
database/MonetDB/scripts/: run.test_simdata.sql
database/MonetDB/tables/: create.table.assoccatsources.sql  create.table.assoccrosscatsources.sql  create.table.assocfreqruncatsources.sql  create.table.associatedsources.sql  create.table.assocsourcelist.sql  create.table.assocxtrsources.sql  create.table.basesources.sql  create.table.catalogedsources.sql  create.table.catalogs.sql  create.table.crosscatalogedsources.sql  create.table.datasets.sql  create.table.dateandtimes.sql  create.table.detections.sh  create.table.extractedsources.sql  create.table.frequencybands.sql  create.table.images.sql  create.table.loadxtrsources.sql  create.table.monitoringlist.sql  create.table.multiplecatalogsources.sql  create.table.node.sql  create.table.obscatsources.sql  create.table.runningcatalog.sql  create.table.runningcatalog_fluxes.sql  create.table.spectralindices.sql  create.table.templsm.sql  create.table.tempmergedcatalogs.sql  create.table.tempmultcatbasesources.sql  create.table.temprunningcatalog.sql  create.table.versions.sh  create.table.versions.sql  create.table.zoneheight.sql  create.table.zones.sql
database/catalog/: CMakeLists.txt
database/catalog/MySQL/: MySQL.catalog.database.create.sql
database/catalog/vlss/: vlss-header.txt
database/catalog/wenss/: wenss-few.csv  wenss.csv
sql/: CMakeLists.txt  batch
sql/functions/: create.function.decl2dms.sql  create.function.getAssocParams.sql  create.function.getAssocParamsByPos.sql  create.function.getAssocParamsRunCat.sql  create.function.getBand.sql  create.function.getDistanceArcsec.sql  create.function.getDistanceXSource2CatArcsec.sql  create.function.getDistanceXSourcesArcsec.sql  create.function.getNearestNeighborInImage.sql  create.function.getNeighborsInCat.sql  create.function.insertDataset.sql  create.function.insertImage.sql  create.function.localSourceDensityInCat_deg2.sql  create.function.nearestNeighborInCat.sql  create.function.neighborsInCats.sql  create.function.neighborsInCatsParams.sql  create.function.solidangle_arcsec2.sql
sql/init/: init.tables.sql
sql/load/: load.cat.nvss.sql  load.cat.skycat.sql  load.cat.vlss.sql  load.cat.wenss.sql
sql/procedures/: create.procedure.BuildFrequencyBands.sql  create.procedure.BuildNodes.sql
sql/queries/: multifreq.tempruncat.sql  select.assocs.lr.groupby.sql  select.assocs.rho.groupby.sql  select.assocs.variability.sql  select.assocs.xtrxtr.variability.sql  select.assocs.xtrxtr.xtrsrcid.sql
sql/queries/bulkupdate/: update_1_to_1_runcat_flux.sql
sql/queries/grb030329/: select.fluxratios.grbdistance.sql  select.multiband.lightcurves.persource.sql  select.x2x.sigmu.bands.sql  select.x2x.sql
sql/queries/simdata/: select.sovermu.sql
sql/queries/skycat/: select.vlss.zenith.calib.sql
sql/scripts/: create.procedure.test_assoc_simdata.sql  test.assoc.sql
sql/scripts/multcat/: assoc.multcat.py
sql/scripts/simrsm/: insert.assoc.orig.py  (+6 more)
sql/tables/: assoccatsource.sql  assocxtrsource.sql  catalog.sql  catalogedsource.sql  classification.sql  create.table.images.sql  create.table.versions.sql  dataset.sql  detection.sql  extractedsource.sql  frequencyband.sql  image.sql  monitoringlist.sql  node.sql  rejection.sql  runningcatalog.sql  runningcatalog_flux.sql  temprunningcatalog.sql  transient.sql  version.sql
sql/upgrade/: 1_to_2.sql  2_to_1.sql
sql/views/: create.view.assocsvarindices.sql  create.view.varindices.sql
(+2215 files in other folders)
